--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/jpeg" href="/Guzone_Logo.jpg" />
+    <link rel="apple-touch-icon" href="/Guzone_Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guzone - Commerce B2B Transfrontalier | RDC vers Kenya & Tanzanie</title>
     <meta name="description" content="Plateforme B2B moderne connectant les entreprises congolaises avec des fournisseurs vérifiés du Kenya et de Tanzanie. Paiements sécurisés, suivi logistique, documentation douanière." />
@@ -10,11 +12,11 @@
     <meta property="og:title" content="Guzone - Commerce B2B Transfrontalier Simplifié" />
     <meta property="og:description" content="Connectez votre entreprise avec des fournisseurs vérifiés d'Afrique de l'Est. Demandes de devis, paiements sécurisés, suivi en temps réel." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/Guzone_Logo.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/Guzone_Logo.jpg" />
   </head>
 
   <body>
