--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/Guzone_Logo.jpg" />
-    <link rel="apple-touch-icon" href="/Guzone_Logo.jpg" />
+    <!-- Favicon for browser tabs - works best at 32x32 or 48x48 pixels -->
+    <link rel="icon" type="image/jpeg" href="/Guzone_Logo.jpg" sizes="32x32" />
+    <link rel="icon" type="image/jpeg" href="/Guzone_Logo.jpg" sizes="16x16" />
+    <!-- Apple Touch Icon - should be 180x180 pixels -->
+    <link rel="apple-touch-icon" href="/Guzone_Logo.jpg" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guzone - Commerce B2B Transfrontalier | RDC vers Kenya & Tanzanie</title>
     <meta name="description" content="Plateforme B2B moderne connectant les entreprises congolaises avec des fournisseurs vérifiés du Kenya et de Tanzanie. Paiements sécurisés, suivi logistique, documentation douanière." />
